devops-python-infra/App Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: python-app
    # namespace: devops-demo
spec:
    replicas: 2
    selector: 
        matchLabels:
            app: python-app
    template: 
        metadata:
            labels:
                app: python-app
        spec:
            containers:
            - name: app
              image: studydocs/devops-python-app-2:98
              imagePullPolicy: Always  
              ports:
              - containerPort: 5000
              - containerPort: 8000
