devops-python-infra/App Service.yaml
apiVersion: v1
kind: Service
metadata:
    name: python-app
    namespace: devops-demo
spec:
    type: NodePort
    ports:
        - port: 5000
          targetPort: 5000
          nodePort: 30007
    selector:
        app: python-app
