devops-python-infra/Service.yaml
apiVersion: v1
kind: Service
metadata: 
    name: mysql
    namespace: devops-demo
spec: 
    ports:
        - port: 3306
    selector:
        app: mysql
